--- a/MyPlants/main/templates/main/login.html
+++ b/MyPlants/main/templates/main/login.html
@@ -14,3 +14,6 @@ Login Here
     <button type="submit" class="btn btn-success">Login</button>
 </form>
 {% endblock %}
+
+<!-- now we need to do the dynamic part of the plant watering,
+the water time in table needs to countdown each day at midnight and reset to the period time the next day -->
