--- a/MyPlants/main/templates/main/home.html
+++ b/MyPlants/main/templates/main/home.html
@@ -1,31 +1,39 @@
 {% extends 'main/base.html' %}
 
-{% block title%}
-MyPlants - home 
+{% block title %}
+MyPlants - Home
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <h1>Your plants:</h1>
-    <div class="table-responsive" style="max-height: 625px; overflow-y: auto;">
-        <table class="table table-striped table-hover text-center">
-            <thead class="thead-dark">
-                <tr>
-                    <th>name</th>
-                    <th>type</th>
-                    <th>water in</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for plant in plants %}
-                <tr>
-                    <td>{{ plant.name }}</td>
-                    <td>{{ plant.type }}</td>
-                    <td>{{ plant.water }} days</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+<form method="POST" action="{% url 'delete_plants' %}">
+    {% csrf_token %}
+    <div class="container">
+        <h1>Your plants:</h1>
+        <div class="text-right mb-3">
+            <button type="submit" class="btn btn-danger">Delete Selected Plants</button>
+        </div>
+        <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
+            <table class="table table-striped table-hover text-center">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>name</th>
+                        <th>type</th>
+                        <th>water in</th>
+                        <th></th> <!-- Empty column for tick square -->
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for plant in plants|dictsort:"water" %}
+                    <tr>
+                        <td>{{ plant.name }}</td>
+                        <td>{{ plant.type }}</td>
+                        <td>{{ plant.water }} days</td>
+                        <td><input type="checkbox" name="plant_id" value="{{ plant.id }}"></td> <!-- Tick square -->
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
-</div>
+</form>
 {% endblock %}
