--- a/MyPlants/main/templates/main/share_success.html
+++ b/MyPlants/main/templates/main/share_success.html
@@ -4,5 +4,5 @@
 
 {% block content %}
     <h3>List Shared Successfully</h3>
-    <p>Your list has been shared successfully with the specified user.</p>
+    <p>Your list has been shared successfully with {{ receiver_email }}.</p>
 {% endblock %}
