--- a/MyPlants/main/templates/main/home.html
+++ b/MyPlants/main/templates/main/home.html
@@ -32,7 +32,7 @@ MyPlants - Home
                         <td>{{ plant.type }}</td>
                         <td>{{ plant.water }} days</td>
                         <td>{{ plant.period }} days</td>
-                        <td><button type="button" class="btn btn-success" plantid="{{ plant.id }}">edit</button></td>
+                        <td><button type="button" class="btn btn-success edit-btn" data-plantid="{{ plant.id }}">edit</button></td>
                         <td><input type="checkbox" name="plant_id" value="{{ plant.id }}"></td> <!-- tick square -->
                     </tr>
                     {% endfor %}
@@ -42,7 +42,7 @@ MyPlants - Home
     </div>
 </form>
 
-{% include 'main/edit.html' %}
+
 
 <!-- <script>
     // Add an event listener to all edit buttons
