--- a/MyPlants/main/templates/main/base.html
+++ b/MyPlants/main/templates/main/base.html
@@ -122,12 +122,6 @@
         .background-rectangle h3 {
             margin-bottom: 20px; /* Adjust the margin to move the text downwards */
         }
-
-
-        /* .container {
-            position: relative; 
-            z-index: 1; 
-        } */
     </style>
 
     <style>
@@ -170,10 +164,6 @@
 
 <body class="{% if not request.user.is_authenticated %}hide{% endif %}">
 <div class="sidenav" id="mySidenav">
-    <!-- <a></a>
-    <a></a>
-    <a></a>
-    <a class="centered-link">m e n u</a> -->
     <a></a>
     <a></a>
     <a></a>
@@ -191,7 +181,7 @@
     <a></a>
     <a href="/requests">requests</a>
     <a></a>
-    <a href="/notifications">notifications</a>
+    <!-- <a href="/notifications">notifications</a> -->
 </div>
 
 <!-- Button to toggle sidebar -->
