--- a/MyPlants/main/templates/main/home.html
+++ b/MyPlants/main/templates/main/home.html
@@ -42,20 +42,19 @@ MyPlants - Home
     </div>
 </form>
 
-
-
-<!-- <script>
-    // Add an event listener to all edit buttons
+<!-- edit function -->
+<script>
+    // add an event listener to all edit buttons
     document.querySelectorAll('.edit_button').forEach(function (editButton) {
         editButton.addEventListener('click', function (event) {
-            // Construct the URL for redirection
+            // construct the URL for redirection
             var redirectUrl = '/view';
             
-            // Redirect to the specified page
+            // redirect to the specified page
             window.location.href = redirectUrl;
         });
     });
-</script> -->
+</script>
 
 
 {% endblock %}
