--- a/MyPlants/main/templates/main/base.html
+++ b/MyPlants/main/templates/main/base.html
@@ -153,7 +153,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-Nb8yQR3BqbmzVtLt8o+1U5GX1hG66A5/4+7MAd4n0I+u5kNpYkpB1WuH/znjzvCs" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" 
+          integrity="sha384-Nb8yQR3BqbmzVtLt8o+1U5GX1hG66A5/4+7MAd4n0I+u5kNpYkpB1WuH/znjzvCs" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
